fixed font size better legibility on the page

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #7F8C8D;
   font-family: 'Amatic SC', cursive;
-  font-size: 36px;
+  font-size: 60px;
 }
 
 .red_font {
